html -> フォーム追加, Python -> フォームの内容を受け取るメソッドの追加

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,5 +9,11 @@
 </head>
 <body>
     <h1>QRコード生成</h1>
+    <div id="inNameUrl">
+        <form action="/result" method="post">
+            <p>名前を入力：<input type="text" name="name" id="name"></p>
+            <p>URLを入力：<input type="url" name="url" id="url"></p>
+        </form>
+    </div>
 </body>
 </html>
