HTML -> 送信ボタンの追加, Python -> QRコードの生成

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,7 @@
         <form action="/result" method="post">
             <p>名前を入力：<input type="text" name="name" id="name"></p>
             <p>URLを入力：<input type="url" name="url" id="url"></p>
+            <p><input type="submit" value="送信"></p>
         </form>
     </div>
 </body>
