--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,8 +2,33 @@ body {
     width: 80%;
     margin: auto;
     font-family: 'Yu Gothic', 'Hiragino kaku Gothic Pro', sans-serif;
+    font-size: 2rem;
 }
 
 h1 {
     text-align: center;
+}
+
+#inNameUrl {
+    width: 100%;
+    margin: auto;
+}
+
+p {
+    text-align: center;
+}
+
+a {
+    text-decoration: none;
+}
+
+#name, #url {
+    width: 600px;
+    font-size: 1.5rem;
+    padding: 5px;
+}
+
+input[type="submit"] {
+    padding: 10px;
+    font-size: 2rem;
 }
